--- a/package.json
+++ b/package.json
@@ -1,21 +1,23 @@
 {
-  "name": "node-js-getting-started",
+  "name": "rocket",
   "version": "0.1.4",
-  "description": "A sample Node.js app using Express 4",
+  "description": "Rocket",
   "main": "index.js",
   "scripts": {
     "start": "node index.js"
   },
   "dependencies": {
+    "body-parser": "^1.13.2",
     "ejs": "^2.3.1",
-    "express": "~4.9.x"
+    "express": "~4.9.x",
+    "pg": "4.x"
   },
   "engines": {
     "node": "0.12.2"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/heroku/node-js-getting-started"
+    "url": "http://rqt.herokuapp.com/"
   },
   "keywords": [
     "node",
