--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "body-parser": "^1.13.2",
     "ejs": "^2.3.1",
     "express": "~4.9.x",
-    "pg": "4.x"
+    "pg": "4.x",
+    "uuid": "^2.0.1"
   },
   "engines": {
     "node": "0.12.2"
