--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "rocket",
   "version": "0.1.4",
   "description": "Rocket",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node app.js"
   },
   "dependencies": {
     "body-parser": "^1.13.2",
