--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rocket",
+  "name": "duel",
   "version": "0.1.4",
-  "description": "Rocket",
+  "description": "Duel",
   "main": "app.js",
   "scripts": {
     "start": "node app.js"
@@ -10,15 +10,13 @@
     "body-parser": "^1.13.2",
     "ejs": "^2.3.1",
     "express": "~4.9.x",
-    "pg": "4.x",
-    "uuid": "^2.0.1"
   },
   "engines": {
     "node": "0.12.2"
   },
   "repository": {
     "type": "git",
-    "url": "http://rqt.herokuapp.com/"
+    "url": "http://fencingduel.herokuapp.com/"
   },
   "keywords": [
     "node",
