--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "dependencies": {
     "body-parser": "^1.13.2",
     "ejs": "^2.3.1",
-    "express": "~4.9.x",
+    "express": "~4.9.x"
   },
   "engines": {
     "node": "0.12.2"
